--- a/css/quiz.css
+++ b/css/quiz.css
@@ -141,7 +141,7 @@ body{
 }
 
     #container {
-        height: 620px;
+        height:auto;
         width: 70vw;
         margin: 30px 0;
         margin-left: 0 !important;
